--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,375 @@
-.App {
-  text-align: center;
+:root{
+  --Primary: #231d1e;
+  --Secondary: #141414;
+  --Links: #EEEEEE;
+  --Links-hover: #ff8207;
+  font-family: 'Ubuntu', sans-serif;
+}
+body{
+  margin: 0 auto;
+  padding: 0;
+  box-sizing: border-box;
+}
+a{
+  text-decoration: none;
+}
+header{
+  background-color: var(--Primary);
+}
+#nav-bar{
+  position: relative;
+  display: flex;
+  justify-content: space-between;
+  padding: 50px 5%;
+  align-items: center;
+}
+.logo{
+  width: 50px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+/* ----------------------------------------------- NAV BAR -------------------------------------- */
+.hamburger{
+  cursor: pointer;
+}
+.bars{
+  display: block;
+  border-radius: 5px;
+  margin: 5px 0;
+  width: 40px;
+  height: 5px;
+  background-color: var(--Links);
+  transition: all .3s;
+}
+.bars:nth-child(2){
+  background-color: var(--Links-hover);
+}
+.nav{
+  display: none;
+}
+.active{
+  position: absolute;
+  top: 100px;
+  width: 80%;
+  right: 5vw;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: var(--Links);
+  padding: 20px;
+  border-radius: 5px;
+}
+.close .bars:nth-child(1){
+  transform: translateY(10px) translateX(0px) rotate(135deg);
+}
+.close .bars:nth-child(2){
+  opacity: 0;
+}
+.close .bars:nth-child(3){
+  transform: translateY(-10px) translateX(0px) rotate(-135deg);
+  background-color: var(--Links-hover);
+}
+.nav-list{
+  padding: 0;
+  gap: 10px;
+  list-style-type: none;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.nav-links{
+  text-transform: uppercase;
+  margin: 5px;
+  cursor: pointer;
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding: 5px;
+  color: var(--Primary);
+  transition: all .3s;
+  border-bottom: solid 2px transparent;
+  font-weight: 600;
+}
+.nav-links:hover{
+  border-bottom: solid 2px var(--Links-hover);
+}
+.cv{
+  cursor: pointer;
+  padding: 10px 20px;
+  border-radius: 50px;
+  border: solid 1px var(--Links-hover);
+  background: transparent;
+  color: var(--Primary);
+  font-weight: 700;
+  transition: ease .5s;
+  font-family: 'Ubuntu', sans-serif;
+}
+.cv:hover{
+  color: var(--Primary);
+  border: 1px solid var(--Primary);
+  /* background: linear-gradient(45deg, var(--Secondary), var(--Links-hover)); */
+  background-color: var(--Links-hover);
+}
+.socials{
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  display: flex;
+  gap: 10px;
+  color: var(--Links);
+}
+.socials img{
+  color: var(--Links);
+  margin-top: 5px;
+  cursor: pointer;
+  filter: invert(1);
+}
+.socials img:hover{
+  filter: brightness(0) saturate(100%) invert(48%) sepia(91%) saturate(814%) hue-rotate(353deg) brightness(101%) contrast(106%);
+}
+/* ------------------------------------------------------------------------------------------------- */
+/* -------------------------------- Hero -------------------------------------- */
+.hero{
+  color: var(--Links);
+  padding: 50px 5%;
+  font-size: 1.3rem;
+}
+.hero span{
+  color: var(--Links-hover);
+}
+/* ------------------------------------------------------------------------------------------------- */
+/* -------------------------------- Main -------------------------------------- */
+main{
+  margin: 0;
+  background-color: var(--Secondary);
+}
+#about{
+  padding: 10px 5%;
+  color: var(--Links);
+  font-size: 18px;
+}
+.about-ttl{
+  font-size: 30px;
+}
+#skills{
+  color: var(--Links);
+  text-align: center;
+  display: grid;
+  gap: 10px;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: repeat(3, 1fr);
+  align-items: center;
+  background-color: var(--Links-hover);
+  padding-bottom: 100px;
+}
+#skills h3{
+  margin-bottom: 0;
+}
+.skills-ttl{
+  margin-top: 0;
+  font-size: 30px;
+  grid-row: 1;
+  grid-column: 1/3;
+}
+#skills p{
+  margin-bottom: 5px;
+  font-weight: 600;
+  font-size: 18px;
+}
+#skills img{
+  width: 150px;
 }
 
-.App-link {
-  color: #61dafb;
+
+#portfolio{
+  color: var(--Links);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 0px 5%;
+
+}
+.portfolio-ttl{
+  font-size: 30px;
+}
+.page-ttl{
+  font-size: 18px;
+  margin-top: 80px;
+}
+#portfolio img{
+  border-radius: 5px;
+  width: 100%;
+  max-width: 500px;
+}
+#portfolio p{
+  text-transform: uppercase;
+  font-weight: 600;
+  color: var(--Links);
+}
+.languages{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+.langDescrip{
+  display: flex;
+  flex-direction: column;
+}
+.langBadges{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.langBadges img{
+  height: 50px;
+}
+#reactbadge{
+  height: 80px;
+}
+.sizeBadges{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+.sizeBadges img{
+  height: 30px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.links{
+  margin-top: 20px;
+  display: flex;
+  gap: 20px;
+}
+.portfolio-link{
+  padding: 10px;
+  text-transform: uppercase;
+  font-weight: 600;
+  color: var(--Links);
+  transition: ease .3s;
+  border-bottom: solid 2px transparent;
+}
+.portfolio-link:hover{
+  border-bottom: solid 2px var(--Links-hover);
+}
+footer{
+  height: 200px;
+  background-color: var(--Primary);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.footer-socials{
+  display: flex;
+  gap: 30px;
+}
+.footer-socials img{
+  color: var(--Links);
+  margin-top: 5px;
+  cursor: pointer;
+  filter: invert(1);
+}
+.footer-socials img:hover{
+  filter: brightness(0) saturate(100%) invert(48%) sepia(91%) saturate(814%) hue-rotate(353deg) brightness(101%) contrast(106%);
+}
+.backtop img{
+  border-radius: 5px;
+  filter: invert(1);
+  margin: 20px 15px;
+  border: solid 1px var(--Secondary);
+}
+.backtop img:hover{
+  filter: brightness(0) saturate(100%) invert(48%) sepia(91%) saturate(814%) hue-rotate(353deg) brightness(101%) contrast(106%);
+
+}
+
+
+
+@media screen and (min-width: 1000px) {
+  .hamburger{
+    display: none;
   }
-  to {
-    transform: rotate(360deg);
+  .nav{
+    display: flex;
   }
+  .nav-list{
+    flex-direction: row;
+  }
+  .nav-links{
+    color: var(--Links);
+  }
+  .cv{
+    color: var(--Links);
+    align-self: center;
+    margin-left: 10px;
+  }
+  .cv:hover{
+    border-color: var(--Links-hover);
+
+  }
+  .hero{
+    padding-bottom: 150px;
+    font-size: 36px;
+    width: 50%;
+  }
+  .langBadges img{
+    height: 80px;
+  }
+  #skills{
+    background-color: var(--Links-hover);
+    padding: 0 5%;
+    grid-template-columns: repeat(3, 1fr);
+    padding-bottom: 100px;
+  }
+  .skills-ttl{
+    font-size: 30px;
+    grid-row: 1;
+    grid-column: 1/4;
+  }
+  #portfolio{
+    padding: 100px 5%;
+    gap: 50px;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+  }
+  .portfolio-ttl{
+    text-align: center;
+    grid-column: 1/4;
+  }
+  #portfolio img{
+  max-width: 800px;
+  }
+  .languages{
+    padding: 0 30px;
+    justify-content: space-between;
+  }
+  .links{
+    margin-left: 20px;
+  }
+  main{
+    padding: 0;
+  }
+  #about{
+    padding: 10px 0;
+    margin: 0;
+    align-items: center;
+    height: 500px;
+    background-image: url(./assets/bg-bg.png);
+    background-repeat: no-repeat;
+    background-position: right;
+    background-size: 50%;
+  }
+  #aboutMe{
+    margin-top: 5%;
+    padding-left: 5%;
+    width: 40%;
+  }
+  #aboutMe p{
+    font-weight: 600;
+    font-size: 18px;
+    line-height: 28px;
+  }
+
+
 }
