--- a/src/App.css
+++ b/src/App.css
@@ -119,6 +119,7 @@ header{
   color: var(--Links);
 }
 .socials img{
+  width: 30px;
   color: var(--Links);
   margin-top: 5px;
   cursor: pointer;
@@ -266,9 +267,11 @@ footer{
 }
 .footer-socials{
   display: flex;
+  margin: 5px auto;
   gap: 30px;
 }
 .footer-socials img{
+  width: 40px;
   color: var(--Links);
   margin-top: 5px;
   cursor: pointer;
@@ -277,12 +280,17 @@ footer{
 .footer-socials img:hover{
   filter: brightness(0) saturate(100%) invert(48%) sepia(91%) saturate(814%) hue-rotate(353deg) brightness(101%) contrast(106%);
 }
+.backtop{
+  display: flex;
+  justify-content: center;
+}
 .backtop img{
   border-radius: 5px;
   filter: invert(1);
-  margin: 20px 15px;
+  margin: 20px auto;
   border: solid 1px var(--Secondary);
 }
+
 .backtop img:hover{
   filter: brightness(0) saturate(100%) invert(48%) sepia(91%) saturate(814%) hue-rotate(353deg) brightness(101%) contrast(106%);
 
@@ -374,6 +382,17 @@ footer{
     font-size: 18px;
     line-height: 28px;
   }
-
+  .backtop-btn-fixed{
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    border: solid 1px var(--Secondary);
+    padding: 3px;
+    padding-left: 4px;
+    padding-right: 4px;
+    filter: invert(0);
+    border-radius: 50px;
+    background-color: var(--Links-hover);
+  }
 
 }
