--- a/src/App.css
+++ b/src/App.css
@@ -228,9 +228,11 @@ main{
 #reactbadge{
   height: 80px;
 }
+#vitebadge{
+  height: 80px;
+}
 #tailwindbadge{
   height: 80px;
-  margin-left: 20px;
 }
 .sizeBadges{
   display: flex;
